# Process-Guard

./: .gitignore  Cargo.toml  README.md
benches/: heavens_gate_bench.rs  syscall_bench.rs  txf_bench.rs
docs/: API.md  README.md  installation.md  navigation.md  quickstart.md
docs/api/: README.md  errors.md  processes.md  syscalls.md  websockets.md  wow64.md
docs/detections/: README.md  direct-syscalls.md  heavens-gate.md
docs/development/: build.md  contributing.md
docs/ops/: config.md
examples/: monitor.rs  usage.rs
src/: api.rs  cli.rs  detector.rs  etw.rs  etw_protection.rs  heavens_gate.rs  kernel_driver.rs  lib.rs  main.rs  ml.rs  syscall_monitor.rs  txf.rs
tests/: etw_protection_tests.rs  heavens_gate_tests.rs  integration_test.rs  syscall_tests.rs  txf_tests.rs
