[package]
name = "process-guard"
version = "0.1.0"
edition = "2021"
authors = ["xrer"]
license = "MIT"
description = "Real-time process injection detection and prevention framework"
repository = "https://github.com/xrer/process-guard"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Kernel"
]}
tokio = { version = "1.41", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
thiserror = "2.0"
anyhow = "1.0"
ntapi = "0.4"
winapi = { version = "0.3", features = ["everything"] }
candle-core = "0.7"
candle-nn = "0.7"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "detection_bench"
harness = false